--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kh1ev",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Y0nnS/Kh1ev-React",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
